Made a little progress on homework 1

--- a/Assignments/Assignment1/Homework_1.ipynb
+++ b/Assignments/Assignment1/Homework_1.ipynb
@@ -425,9 +425,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>Length</th><th scope=col>Width</th><th scope=col>Height</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Length</th><td>138.76630</td><td>79.14674 </td><td>37.37500 </td></tr>\n",
+       "\t<tr><th scope=row>Width</th><td> 79.14674</td><td>50.04167 </td><td>21.65399 </td></tr>\n",
+       "\t<tr><th scope=row>Height</th><td> 37.37500</td><td>21.65399 </td><td>11.25906 </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lll}\n",
+       "  & Length & Width & Height\\\\\n",
+       "\\hline\n",
+       "\tLength & 138.76630 & 79.14674  & 37.37500 \\\\\n",
+       "\tWidth &  79.14674 & 50.04167  & 21.65399 \\\\\n",
+       "\tHeight &  37.37500 & 21.65399  & 11.25906 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | Length | Width | Height |\n",
+       "|---|---|---|---|\n",
+       "| Length | 138.76630 | 79.14674  | 37.37500  |\n",
+       "| Width |  79.14674 | 50.04167  | 21.65399  |\n",
+       "| Height |  37.37500 | 21.65399  | 11.25906  |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       Length    Width    Height  \n",
+       "Length 138.76630 79.14674 37.37500\n",
+       "Width   79.14674 50.04167 21.65399\n",
+       "Height  37.37500 21.65399 11.25906"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -481,35 +521,16 @@
     "D <- m_males - M_mean\n",
     "\n",
     "# creates the covariance matrix\n",
-    "(n-1)^-1 * (t(D) %*% D)"
+    "(n-1)^-1 * (t(D) %*% D)\n",
+    "males.cov"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "0.0434782608695652"
-      ],
-      "text/latex": [
-       "0.0434782608695652"
-      ],
-      "text/markdown": [
-       "0.0434782608695652"
-      ],
-      "text/plain": [
-       "[1] 0.04347826"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "1/(n-1)"
+    "Whether you compute the covariance matrix with the given formula or with the built in function in R\n",
+    "you get the same results."
    ]
   },
   {
@@ -523,15 +544,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. For one of the genders, compute the matrix $T = \\frac{1}{n-1} (\\mathbf{Y}^T \\mathbf{Y} - n \\mathbf{\\bar{y}} \\mathbf{\\bar{y}}^T)$ and compare it with thecovariance matrix you previously obtained.\n",
-    "\n",
     "4. For one of the covariance matrices, compute the eigenvalues and eigenvectors of the inverse\n",
     "of the covariance matrix. What is the relationship between the eigenvalues and eigenvectors\n",
-    "of a covariance matrix and its inverse?\n",
-    "\n",
-    "5. Letting 𝒖𝒖1 denote the eigenvector corresponding to the largest eigenvector, 𝜆𝜆1 . Verify\n",
-    "that 𝑺𝑺𝒖𝒖1 = 𝜆𝜆1𝒖𝒖1 and 𝒖𝒖1\n",
-    "𝑇𝑇𝑺𝑺𝒖𝒖1 = 𝜆𝜆1.\n",
+    "of a covariance matrix and its inverse?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>0.905934472340189</li>\n",
+       "\t<li>0.271108226434112</li>\n",
+       "\t<li>0.00512099286490819</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 0.905934472340189\n",
+       "\\item 0.271108226434112\n",
+       "\\item 0.00512099286490819\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 0.905934472340189\n",
+       "2. 0.271108226434112\n",
+       "3. 0.00512099286490819\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 0.905934472 0.271108226 0.005120993"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td> 0.23653541</td><td> 0.48810477</td><td>0.8401219  </td></tr>\n",
+       "\t<tr><td> 0.04687583</td><td>-0.86938426</td><td>0.4919082  </td></tr>\n",
+       "\t<tr><td>-0.97049145</td><td> 0.07697229</td><td>0.2285205  </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t  0.23653541 &  0.48810477 & 0.8401219  \\\\\n",
+       "\t  0.04687583 & -0.86938426 & 0.4919082  \\\\\n",
+       "\t -0.97049145 &  0.07697229 & 0.2285205  \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "|  0.23653541 |  0.48810477 | 0.8401219   |\n",
+       "|  0.04687583 | -0.86938426 | 0.4919082   |\n",
+       "| -0.97049145 |  0.07697229 | 0.2285205   |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1]        [,2]        [,3]     \n",
+       "[1,]  0.23653541  0.48810477 0.8401219\n",
+       "[2,]  0.04687583 -0.86938426 0.4919082\n",
+       "[3,] -0.97049145  0.07697229 0.2285205"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "inv.males.cov <- solve(males.cov)\n",
+    "males.eig <- eigen(inv.males.cov)\n",
+    "males.eig$values\n",
+    "males.eig$vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in check.orthogonality(males.cov): could not find function \"check.orthogonality\"\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in check.orthogonality(males.cov): could not find function \"check.orthogonality\"\nTraceback:\n"
+     ]
+    }
+   ],
+   "source": [
+    "check.orthogonality(males.cov)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add Description - Verify if the above formula is correct?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Letting $\\mathbf{u_1}$ denote the eigenvector corresponding to the largest eigenvector, $\\lambda_1$ . Verify\n",
+    "that $\\mathbf{Su_1} = \\lambda_1 \\mathbf{u}_1$ and $\\mathbf{u}_1^T \\mathbf{Su_1} = \\lambda_1$.\n",
     "\n",
     "6. The length, width, and height are all measured in the same units. Is there any reason we\n",
     "might prefer to use the correlation matrices over the covariance matrices if we were to carry\n",
