--- a/Definitions_and_Functions.ipynb
+++ b/Definitions_and_Functions.ipynb
@@ -45,6 +45,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Eigenvalues\n",
+    "* The scalar that is used to transform (stretch) an Eigenvector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Eigenvectors\n",
+    "* It s a vector that is scaled up by a transformation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Identity Matrix\n",
+    "* [Description](http://mathworld.wolfram.com/IdentityMatrix.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Orthogonal Matrix\n",
+    "* [Definition of Orthogonal](http://mathworld.wolfram.com/Orthogonal.html)\n",
+    "* [Description of Orthogonal Matrix](http://mathworld.wolfram.com/OrthogonalMatrix.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## References"
    ]
   },
@@ -52,18 +85,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* [Eiganvalues & Eiganvectors](https://medium.com/fintechexplained/what-are-eigenvalues-and-eigenvectors-a-must-know-concept-for-machine-learning-80d0fd330e47)\n",
+    "* [Eigenvectos & Eigenvalues Video](https://www.youtube.com/watch?v=PFDu9oVAE-g)\n",
     "* [Simple Statistics](https://www.youtube.com/watch?v=xGbpuFNR1ME&list=PLIeGtxpvyG-JMH5fGDWhtniyET88Mexcw&index=5)\n",
     "* [Symbols, Meaning, Latex](https://en.wikipedia.org/wiki/List_of_mathematical_symbols)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -71,18 +99,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "<ol>\n",
-    "   <li>Coffee</li>"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "   <li>Tea</li>\n",
-    "</ol>"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
