Homework 1 and classification notes

--- a/Definitions_and_Functions.ipynb
+++ b/Definitions_and_Functions.ipynb
@@ -12,9 +12,10 @@
    "metadata": {},
    "source": [
     "## Correlation:\n",
+    "* Correlation Matrix = $\\mathbf{R}$\n",
     "* Provides the direction and strength of a relationship.\n",
     "* the correlation result will always be between -1 and +1 and its scale is independent of the scale of the variables themselves.\n",
-    "* Correlation is standardized (think z-score).\n",
+    "* Correlation is standardized (think z-score) It is the standardized version of the correlatin matrix. This means you would want to use this if your variables are being measured using different scales.\n",
     "* Correlation is only applicable to LINEAR relationships. There are many other tyes of relationships that can exist between two variables.\n",
     "* Correlation is NOT Causation.\n",
     "* Correlation strength does not necessarily mena the correlation is statistically significant; related to sample size.\n",
@@ -33,6 +34,8 @@
     "* Covariance is not standardized.\n",
     "\n",
     "## Covariance Matrix:\n",
+    "* Variance-covariance matrix = $\\mathbf{S}$\n",
+    "* Variance-covariance matrix aka the covariance matrix or the dispersion matrix.\n",
     "* [Covariance Matrix](https://www.youtube.com/watch?v=locZabK4Als)\n",
     "* Interpretation: A positive value indicates a direct or increasing linear relationship, A negative value indicates a decreasing relationship. Covariance at or around zero indicates that there is not a linear relationship between the two. Covariance does not tell us anything about the strength of the relationship just the direction of the relationship. To find the strength of the relationship you will want to look at correlation.\n",
     "* The diagonal of a covariance matrix provides the variance of each individual variable; covariance with itself.\n",
@@ -46,7 +49,11 @@
    "metadata": {},
    "source": [
     "## Eigenvalues\n",
-    "* The scalar that is used to transform (stretch) an Eigenvector"
+    "* For a square matrix $\\mathbf{A}$ and a non-zero vector $\\mathbf{x}$ if $\\mathbf{Ax = \\lambda x}$ for some constant $\\lambda{}$ then we say that $\\lambda$ is an eigenvalue of $\\mathbf{A}$ and that $\\mathbf{x}$ is an eigenvecotr of $\\mathbf{A}$ corresponding to the eigenvalue of $\\lambda$.\n",
+    "* The scalar that is used to transform (stretch) an Eigenvector\n",
+    "* The Eigenvalue divided by the total variance will give you the proportion of the variability explained by that vector?  ASK ABOUT THAT INTERPRETATION!!!!!\n",
+    "* The total variance comes from adding up all the diagonal values in the covariance matrix.\n",
+    "* At least for the correlation matrix you can find out the proportion of variability that is explained by a variable through its eigenvalue. By adding up all of the eigenvalues and then dividing the eigenvalue by the sum of all eigenvalues."
    ]
   },
   {
@@ -88,7 +95,9 @@
     "* [Eiganvalues & Eiganvectors](https://medium.com/fintechexplained/what-are-eigenvalues-and-eigenvectors-a-must-know-concept-for-machine-learning-80d0fd330e47)\n",
     "* [Eigenvectos & Eigenvalues Video](https://www.youtube.com/watch?v=PFDu9oVAE-g)\n",
     "* [Simple Statistics](https://www.youtube.com/watch?v=xGbpuFNR1ME&list=PLIeGtxpvyG-JMH5fGDWhtniyET88Mexcw&index=5)\n",
-    "* [Symbols, Meaning, Latex](https://en.wikipedia.org/wiki/List_of_mathematical_symbols)"
+    "* [Symbols, Meaning, Latex](https://en.wikipedia.org/wiki/List_of_mathematical_symbols)\n",
+    "* [PCA Eigenvectors and Eigenvaleus](https://towardsdatascience.com/pca-eigenvectors-and-eigenvalues-1f968bc6777a)\n",
+    "* [PCA Analysis: Minitab](https://support.minitab.com/en-us/minitab/18/help-and-how-to/modeling-statistics/multivariate/how-to/principal-components/interpret-the-results/key-results/)"
    ]
   },
   {
