--- a/Lectures_Slides_Notes/Turtles.ipynb
+++ b/Lectures_Slides_Notes/Turtles.ipynb
@@ -981,6 +981,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1/22/19\n",
+    "$Relh_1 - Relh_{12} -->$ Avg of 12 months (Relh Ave) = $\\frac{1}{12}\\sum_{i=1}^{12}{Relh_i}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
